# EQC

./: CMakeLists.txt
cmake/: FindDetours.cmake
common/: CMakeLists.txt  crc32.h  eq_data_file.cpp  eq_data_file.h  eqemu_structs.h  file_verify.h  log.cpp  log.h  logical_packet.cpp  logical_packet.h  memory_dump.cpp  memory_dump.h  safe_write.cpp  safe_write.h  stack_walker.cpp  string_util.cpp  string_util.h  types.h
data/: LoadingMessages.txt  ModelData.txt  ZoneData.txt
detours/lib/: detours.lib  syelog.lib
src/: CMakeLists.txt  command_data.h  dinput8.def  eqgame_functions.h  main.cpp  patch.cpp  patch.h  patch_command.cpp  patch_manager.cpp  patch_manager.h  patch_null.cpp  patch_null.h  patch_rof2.cpp  patch_rof2.h  patch_rof2_eqgame.h  patch_rof2_hooks.cpp  patch_rof2_hooks.h  patch_sod.cpp  patch_sod.h  patch_sod_eqgame.h  patch_sod_hooks.cpp  patch_sod_hooks.h  patch_titanium.cpp  patch_titanium.h  patch_titanium_eqgame.h  patch_titanium_hooks.cpp  patch_titanium_hooks.h  patch_uf.cpp  patch_uf.h  patch_uf_eqgame.h  patch_uf_hooks.cpp  patch_uf_hooks.h  patch_zone.cpp  zone_data.h
